fix header logo flex gap

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -335,14 +335,13 @@ nav {
     justify-content: center;
     align-items: center;
     font-size: 2rem;
+    gap: 1rem;
     > div {
-      margin-bottom: -4px;
-      margin-left: 0.5rem;
       font-family: "Helios";
     }
     img {
-      width: 22px;
-      height: 22px;
+      width: 25px;
+      height: 25px;
     }
 }
 #bottom_logo {
